# sundaybike_rating

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  rules.md
alembic/: env.py
alembic/versions/: 0d7825fba0af_.py  0ee92dfc8941_.py  24a4b6c82df6_.py  264f044566de_.py  3e8b33d501d1_.py  55780f7cfca0_.py  702a9c7d6fc7_.py  89d8f1e7eacf_.py  93a7eacdcb81_.py  95cf7d885d75_.py  9726de83a466_.py  9d2815a9ce58_.py  afa300087a25_.py  bfc6f545fce7_.py  ea6321b8029f_.py  ee0ce3b4f685_.py
db/: connection.py  models.py
db/scripts/: athlete_category_triggers.sql  merge_athletes.sql  race_points_view.sql  season_points_view.sql  update_categories.sql  update_categories_old.sql
rating_bot/: __main__.py  bot_commands.md  bot_instance.py  race_file_parse.py  races.py  results.py
stubs/redis/: __init__.pyi  backoff.pyi  client.pyi  cluster.pyi  connection.pyi  credentials.pyi  exceptions.pyi  lock.pyi  ocsp.pyi  retry.pyi  sentinel.pyi  typing.pyi  utils.pyi
stubs/redis/_parsers/: __init__.pyi  base.pyi  commands.pyi  encoders.pyi  helpers.pyi  hiredis.pyi  resp2.pyi  resp3.pyi  socket.pyi
stubs/redis/asyncio/: __init__.pyi  client.pyi  cluster.pyi  connection.pyi  lock.pyi  retry.pyi  sentinel.pyi  utils.pyi
stubs/redis/commands/: __init__.pyi  cluster.pyi  core.pyi  helpers.pyi  redismodules.pyi  sentinel.pyi
stubs/sqlalchemy/: __init__.pyi  events.pyi  exc.pyi  inspection.pyi  log.pyi
stubs/sqlalchemy/connectors/: __init__.pyi  aioodbc.pyi  asyncio.pyi  pyodbc.pyi
stubs/sqlalchemy/dialects/: __init__.pyi  _typing.pyi
stubs/sqlalchemy/engine/: __init__.pyi  _py_processors.pyi  _py_row.pyi  _py_util.pyi  base.pyi  characteristics.pyi  create.pyi  cursor.pyi  default.pyi  events.pyi  interfaces.pyi  mock.pyi  processors.pyi  reflection.pyi  result.pyi  row.pyi  strategies.pyi  url.pyi  (+1 more)
stubs/telebot/: __init__.pyi  apihelper.pyi  async_telebot.pyi  asyncio_filters.pyi  asyncio_handler_backends.pyi  asyncio_helper.pyi  callback_data.pyi  custom_filters.pyi  formatting.pyi  handler_backends.pyi  service_utils.pyi  types.pyi  util.pyi
stubs/transliterate/: __init__.pyi  base.pyi  conf.pyi  decorators.pyi  defaults.pyi  discover.pyi  exceptions.pyi  helpers.pyi  utils.pyi
(+269 files in other folders)
